Menta themes GTK3: fix blurred window controls icons

--- a/desktop-themes/BlueMenta/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/BlueMenta/gtk-3.0/gtk-widgets.css
@@ -2652,7 +2652,7 @@ GtkCheckButton.text-button, GtkRadioButton.text-button {
  ***************/
 .titlebar, GtkCalendar.header,
 .header-bar {
-	border-width: 0px 0px 0px 0px;
+	border-width: 0 0 1px;
 	border-style: solid;
 	border-color: shade(@borders, 0.90);
 	box-shadow: inset 0 -1px shade(@wm_bg_b, 0.95);
@@ -4555,23 +4555,24 @@ GtkModelButton.button.flat:selected {
 
 .titlebar .titlebutton {
     color: @wm_title;
-    padding: 4px 5px;
-/*    border: none;
-    border-image: none;*/
-}
-
-.titlebar .titlebutton {
+    padding: 2px 6px 3px 3px;
+    border: none;
+    border-image: none;
     /* fake request for hardcoded icons,
      to avoid usage of regular window-close button*/
     -gtk-icon-style: requested;
-    color: @wm_title;
-    padding: 4px;
+}
+
+.titlebar .titlebutton:hover {
+    border: none;
     border-image: none;
 }
 
-.titlebar .titlebutton:active {
-/*    border: none;
-    border-image: none;*/
+.titlebar .titlebutton:active,
+.titlebar .titlebutton:checked,
+.titlebar .titlebutton:checked:checked {
+    border: none;
+    border-image: none;
 }
 
 .titlebar .titlebutton:backdrop {
